--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,7 +61,7 @@
             position: absolute;
             left: 130px;
             top: 350px;
-            font-family:'Times New Roman', Times, serif;
+            font-family:'Segoe UI', Tahoma, Verdana, sans-serif;
             font-size: 30px;
             font-variant-caps: all-petite-caps;
             line-height: .25;
@@ -116,7 +116,7 @@
 
     <div class ="button-container">
          <button>
-            <a href = "loginPage.html" style="text-decoration:none; color:inherit"> Login
+            <a href = "loginPage.html" style="text-decoration:none; color:inherit"> Login </a>
         </button>
 
         <button>
