--- a/frontend/loginPage.html
+++ b/frontend/loginPage.html
@@ -1,106 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <style>
-         body{
-            background:url(loginSignUpBG.jpg);
-            background-size: cover;
-            margin: 0;
-            
-        }
-        .container{
-            text-align: center;
-            font-family:'Times New Roman', Times, serif;
-            font-size: 30px;
-        }
-
-        /* Same styles as before */
-        .usernameBox, .emailBox{
-            position: absolute;
-            left: 650px;
-            border-radius: 10px;
-            border-width: 10px;
-            border-color:lightcyan;
-        }
-        .passwordBox{
-            position: absolute;
-            left: 650px;
-            top: 200px;
-            border-radius: 10px;
-            border-width: 10px;
-            border-color:lightcyan;
-        }
-        .noLogin{
-            text-align: center;
-            font-family:'Times New Roman', Times, serif;
-            font-size: 10px;
-            position: absolute;
-            left: 630px;
-            top: 500px;
-        }
-
-        .loginButton{
-            text-align: center;
-            position: absolute;
-            left: 680px;
-            top: 300px;
-            padding: 15px 30px;
-            font-size: 15px;
-            background-color: black;
-            color: white;
-            border:none;
-            border-radius: 20px;
-            cursor: pointer;
-        }
-
-        .smallSignupButton{
-            text-align: center;
-            position: absolute;
-            left: 690px;
-            top: 550px;
-            padding: 7px 15px;
-            font-size: 15px;
-            background-color: black;
-            color: white;
-            border:none;
-            border-radius: 20px;
-            cursor: pointer;
-        }
-        
-        .message {
-            text-align: center;
-            margin-top: 350px;
-            color: white;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 10px;
-            border-radius: 5px;
-            display: none;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login</title>
+  <style>
+    body {
+      background: url(loginSignUpBG.jpg);
+      background-size: cover;
+      margin: 0;
+    }
+    .container {
+      text-align: center;
+      font-family: 'Times New Roman', Times, serif;
+      font-size: 30px;
+    }
+    .usernameBox, .passwordBox {
+      position: absolute;
+      left: 650px;
+      border-radius: 10px;
+      border-width: 10px;
+      border-color: lightcyan;
+    }
+    .passwordBox {
+      top: 200px;
+    }
+    .noLogin {
+      text-align: center;
+      font-family: 'Times New Roman', Times, serif;
+      font-size: 10px;
+      position: absolute;
+      left: 630px;
+      top: 500px;
+    }
+    .loginButton {
+      position: absolute;
+      left: 680px;
+      top: 300px;
+      padding: 15px 30px;
+      font-size: 15px;
+      background-color: black;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      cursor: pointer;
+    }
+    .smallSignupButton {
+      position: absolute;
+      left: 690px;
+      top: 550px;
+      padding: 7px 15px;
+      font-size: 15px;
+      background-color: black;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome Back!</h1>
-    </div>
+  <div class="container">
+    <h1>Welcome Back!</h1>
+  </div>
 
-    <!-- Simple login form with direct action -->
-    <form action="/api/v1/login" method="POST" id="loginForm">
-        <input type="text" name="username" id="username" class="usernameBox" placeholder="Enter Username: " required>
-        <input type="password" name="password" id="password" class="passwordBox" placeholder="Enter Password: " required>
-        <button type="submit" class="loginButton">Login</button>
-    </form>
+  <div>
+    <input type="text" id="username" class="usernameBox" placeholder="Enter Username:" />
+    <input type="password" id="password" class="passwordBox" placeholder="Enter Password:" />
+    <button id="loginBtn" class="loginButton">Login</button>
+  </div>
 
-    <div class="noLogin">
-        <h2>Have not made an account yet?</h2>
-    </div>
+  <div class="noLogin">
+    <h2>Have not made an account yet?</h2>
+  </div>
 
-    <a href="signUpPage.html">
-        <button class="smallSignupButton">Sign up</button>
-    </a>
+  <a href="signUpPage.html">
+    <button class="smallSignupButton">Sign up</button>
+  </a>
 
-    <div id="message" class="message"></div>
+  <script>
+    document.getElementById('loginBtn').addEventListener('click', function () {
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+
+      const data = {
+        username: username,
+        password: password
+      };
+
+      fetch('http://127.0.0.1:5000/api/v1/login', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(data)
+      })
+      .then(response => response.json())
+      .then(responseData => {
+        if (responseData.message === 'Login successful') {
+          window.location.href = 'homePage.html';
+        } else {
+          alert(responseData.message || 'Login failed');
+        }
+      })
+      .catch(error => {
+        console.error('Login error:', error);
+        alert('Connection error. Please try again.');
+      });
+    });
+  </script>
 </body>
 </html>
