--- a/frontend/signUpPage.html
+++ b/frontend/signUpPage.html
@@ -3,146 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <script src="home_page.js" defer></script>
+    <title>Votify</title>
+
     <style>
-        body {
-            background: url(loginSignUpBG.jpg);
-            background-size: cover;
+        [data-tab-content] {
+            display: none;
+        }
+
+        .active[data-tab-content] {
+            display: block;
+        }
+
+        .tabs {
+            display: flex;
+            justify-content: space-around;
+            list-style-type: none;
             margin: 0;
+            margin-top: 100px;
+            padding: 0;
+            border-top: 1px solid black;
+            border-bottom: 1px solid black;
+            border-width: 15px;
         }
 
-        .container {
-            text-align: center;
-            font-family: 'Times New Roman', Times, serif;
-            font-size: 30px;
+        body {
+            background: linear-gradient(to right, rgb(199, 210, 230), #cae0f6);
+            margin: 0;
+            padding: 0;
         }
 
-        .usernameBox,
-        .passwordBox,
-        .emailBox {
-            position: absolute;
-            left: 650px;
-            border-radius: 10px;
-            border-width: 2px;
-            border-color: lightcyan;
+        .tab {
+            cursor: pointer;
             padding: 10px;
-            font-size: 16px;
-            width: 200px;
         }
 
-        .usernameBox { top: 150px; }
-        .passwordBox { top: 200px; }
-        .emailBox { top: 250px; }
+        .tab.active {
+            background-color: rgb(172, 191, 209);
+        }
 
-        .signUpButton {
+        .tab.hover {
+            background-color: whitesmoke;
+        }
+
+        .votify {
             position: absolute;
-            left: 680px;
-            top: 310px;
-            padding: 15px 30px;
+            top: 0px;
+            left: 10px;
+            font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+            font-size: 20px;
+            font-variant-caps: all-petite-caps;
+        }
+
+        #create {
+            position: absolute;
+            top: 210px;
+            left: 400px;
+            padding: 15px 200px;
             font-size: 15px;
-            background-color: black;
+            background-color: rgb(92, 108, 148);
             color: white;
             border: none;
-            border-radius: 20px;
+            border-radius: 70px;
             cursor: pointer;
         }
 
-        .message {
-            text-align: center;
-            margin-top: 400px;
+        .createButton {
             color: white;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 10px;
-            border-radius: 5px;
-            display: none;
-            width: fit-content;
-            margin-left: auto;
-            margin-right: auto;
+            text-align: center;
+            padding: 10px 30px;
+            font-size: 15px;
+            background-color: black;
         }
 
-        .error {
-            background-color: rgba(255, 0, 0, 0.7);
+        .createButton:hover {
+            background-color: rgb(50, 48, 57);
         }
 
-        .success {
-            background-color: rgba(0, 128, 0, 0.7);
+        #home {
+            position: absolute;
+            top: 210px;
+            left: 550px;
+        }
+
+        #vote {
+            position: absolute;
+            top: 210px;
+            left: 550px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome!</h1>
+    <ul class="tabs">
+        <li data-tab-target="#home" class="active tab">Home</li>
+        <li data-tab-target="#vote" class="tab">Vote</li>
+        <li data-tab-target="#create" class="tab">Create Poll</li>
+    </ul>
+
+    <div class="tabsContainer">
+
+        <div id="home" data-tab-content class="active">
+            <h1>Welcome to Votify!</h1>
+            <p>- Navigate to "Vote" to vote on polls</p>
+            <p>- Navigate to "Create Poll" to create polls</p>
+        </div>
+
+        <div id="vote" data-tab-content>
+            <h1>Time to Vote!</h1>
+            <p>Here are the available polls:</p>
+            <div id="pollsList"></div> <!-- Polls will be displayed here -->
+        </div>
+
+        <div id="create" data-tab-content>
+            <h1>Create a poll</h1>
+            <form id="createPollForm">
+                <label for="question">Poll Question:</label><br>
+                <input type="text" id="questionInput" required><br><br>
+
+                <label for="expires">Expires At:</label><br>
+                <input type="datetime-local" id="expiresInput" required><br><br>
+
+                <label for="username">Username: </label><br>
+                <input type="text" id="usernameInput" required><br><br>
+
+                <label for="password">Password: </label><br>
+                <input type="password" id="passwordInput" required><br><br>
+
+                <button class="createButton" type="submit">Create Poll</button>
+            </form>
+            <p id="createPollMessage" style="color: rgb(0, 0, 0);"></p>
+        </div>
     </div>
 
-    <input type="text" id="username" class="usernameBox" placeholder="Enter Username">
-    <input type="password" id="password" class="passwordBox" placeholder="Enter Password">
-    <input type="text" id="email" class="emailBox" placeholder="Enter Email">
-    <button id="signupButton" class="signUpButton">Sign up</button>
-
-    <div id="message" class="message"></div>
+    <div class="votify">
+        <h1>Votify</h1>
+    </div>
 
     <script>
-        function showMessage(message, type) {
-            const messageDiv = document.getElementById('message');
-            messageDiv.textContent = message;
-            messageDiv.className = `message ${type}`;
-            messageDiv.style.display = 'block';
-        }
-
-        document.getElementById('signupButton').addEventListener('click', async function () {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-            const email = document.getElementById('email').value;
-
-            if (!username || !password || !email) {
-                showMessage('Please fill in all fields', 'error');
-                return;
-            }
-
-            const url = "http://127.0.0.1:5000/api/v1/signup";
-            const data = {
-                username: username,
-                email: email,
-                password: password
-            };
-
-            try {
-                const response = await fetch(url, {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/json"
-                    },
-                    body: JSON.stringify(data)
-                });
-
-                const responseBody = await response.text();
-
-                if (response.ok) {
-                    let parsedData;
-                    try {
-                        parsedData = JSON.parse(responseBody);
-                    } catch {
-                        parsedData = { message: "User registered successfully" };
-                    }
-
-                    showMessage(parsedData.message || "Signup successful", 'success');
-                    setTimeout(() => {
-                        window.location.href = 'homePage.html';
-                    }, 1500);
+        // Fetch polls from the API
+        fetch('http://127.0.0.1:5000/api/v1/polls')
+            .then(response => response.json())
+            .then(data => {
+                // Handle the list of polls
+                const pollsListDiv = document.getElementById('pollsList');
+                if (data.length > 0) {
+                    data.forEach(poll => {
+                        const pollElement = document.createElement('div');
+                        pollElement.textContent = poll; // Display the poll question
+                        pollsListDiv.appendChild(pollElement);
+                    });
                 } else {
-                    let errorData;
-                    try {
-                        errorData = JSON.parse(responseBody);
-                    } catch {
-                        throw new Error("Signup failed");
-                    }
-
-                    throw new Error(errorData.error || "Signup failed");
+                    pollsListDiv.textContent = 'No polls available at the moment.';
                 }
-            } catch (error) {
-                showMessage(error.message, 'error');
-            }
-        });
+            })
+            .catch(error => {
+                const pollsListDiv = document.getElementById('pollsList');
+                pollsListDiv.textContent = "Error fetching polls: ${error.message};
+            });
     </script>
+
 </body>
 </html>
