--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "home_page.js" defer></script>
+    <script src="home_page.js" defer></script>
     <title>Votify</title>
 
     <style>
@@ -124,6 +124,55 @@
             margin-top: 5px;
             border-radius: 4px;
             border: 1px solid #ccc;
+        }
+
+        /* New styles for voting buttons */
+        .vote-buttons {
+            display: flex;
+            align-items: center;
+            margin-top: 10px;
+        }
+
+        .vote-button {
+            background-color: #f0f0f0;
+            border: none;
+            border-radius: 4px;
+            padding: 5px 10px;
+            margin-right: 10px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+        }
+
+        .upvote {
+            color: #4CAF50;
+        }
+
+        .downvote {
+            color: #F44336;
+        }
+
+        .vote-button:hover {
+            background-color: #e0e0e0;
+        }
+
+        .vote-count {
+            margin: 0 10px;
+            font-weight: bold;
+        }
+
+        .vote-summary {
+            display: flex;
+            align-items: center;
+            margin-top: 5px;
+            font-size: 14px;
+            color: #555;
+        }
+
+        .vote-message {
+            color: #4CAF50;
+            margin-top: 5px;
+            font-size: 14px;
         }
     </style>
 </head>
