--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -5,179 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="home_page.js" defer></script>
     <title>Votify</title>
-
-    <style>
-        [data-tab-content] {
-            display: none;
-        }
-
-        .active[data-tab-content] {
-            display: block;
-        }
-
-        .tabs {
-            display: flex;
-            justify-content: space-around;
-            list-style-type: none;
-            margin: 0;
-            margin-top: 100px;
-            padding: 0;
-            border-top: 1px solid black;
-            border-bottom: 1px solid black;
-            border-width: 15px;
-        }
-
-        body {
-            background: linear-gradient(to right, rgb(199, 210, 230), #cae0f6);
-            margin: 0;
-            padding: 0;
-        }
-
-        .tab {
-            cursor: pointer;
-            padding: 10px;
-        }
-
-        .tab.active {
-            background-color: rgb(172, 191, 209);
-        }
-
-        .tab.hover {
-            background-color: whitesmoke;
-        }
-
-        .votify {
-            position: absolute;
-            top: 0px;
-            left: 10px;
-            font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-            font-size: 20px;
-            font-variant-caps: all-petite-caps;
-        }
-
-        #create {
-            position: absolute;
-            top: 210px;
-            left: 400px;
-            padding: 15px 200px;
-            font-size: 15px;
-            background-color: rgb(92, 108, 148);
-            color: white;
-            border: none;
-            border-radius: 70px;
-            cursor: pointer;
-        }
-
-        .createButton {
-            color: white;
-            text-align: center;
-            padding: 10px 30px;
-            font-size: 15px;
-            background-color: black;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .createButton:hover {
-            background-color: rgb(50, 48, 57);
-        }
-
-        #home {
-            position: absolute;
-            top: 210px;
-            left: 550px;
-        }
-
-        #vote {
-            position: absolute;
-            top: 210px;
-            left: 550px;
-        }
-
-        .poll-item {
-            background-color: white;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .options-container {
-            margin-top: 20px;
-        }
-
-        .option-input {
-            margin-bottom: 10px;
-        }
-
-        #createPollForm {
-            max-width: 500px;
-            margin: 0 auto;
-        }
-
-        #createPollForm input[type="text"],
-        #createPollForm input[type="datetime-local"],
-        #createPollForm input[type="password"] {
-            width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-        }
-
-        /* New styles for voting buttons */
-        .vote-buttons {
-            display: flex;
-            align-items: center;
-            margin-top: 10px;
-        }
-
-        .vote-button {
-            background-color: #f0f0f0;
-            border: none;
-            border-radius: 4px;
-            padding: 5px 10px;
-            margin-right: 10px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-        }
-
-        .upvote {
-            color: #4CAF50;
-        }
-
-        .downvote {
-            color: #F44336;
-        }
-
-        .vote-button:hover {
-            background-color: #e0e0e0;
-        }
-
-        .vote-count {
-            margin: 0 10px;
-            font-weight: bold;
-        }
-
-        .vote-summary {
-            display: flex;
-            align-items: center;
-            margin-top: 5px;
-            font-size: 14px;
-            color: #555;
-        }
-
-        .vote-message {
-            color: #4CAF50;
-            margin-top: 5px;
-            font-size: 14px;
-        }
-    </style>
+    <link rel="stylesheet" href="homePageStyle.css">
+ 
 </head>
 <body>
-    <ul class="tabs">
+    <!--create a tab class to contain all 3 tabs-->
+    <ul class="tabs"><!--create a list item for each-->
         <li data-tab-target="#home" class="active tab">Home</li>
         <li data-tab-target="#vote" class="tab">Vote</li>
         <li data-tab-target="#create" class="tab">Create Poll</li>
@@ -188,18 +21,18 @@
         <div id="home" data-tab-content class="active">
             <h1>Welcome to Votify!</h1>
             <p>- Navigate to "Vote" to vote on polls</p>
-            <p>- Navigate to "Create Poll" to create polls</p>
+            <p>- Navigate to "Create Poll" to create polls</p> <!--Home tab msg-->>
         </div>
 
         <div id="vote" data-tab-content>
             <h1>Time to Vote!</h1>
             <p>Here are the available polls:</p>
-            <div id="pollsList"></div> <!-- Polls will be displayed here -->
+            <div id="pollsList"></div> <!-- Poll tab msg -->
         </div>
 
         <div id="create" data-tab-content>
             <h1>Create a poll</h1>
-            <form id="createPollForm">
+            <form id="createPollForm"> <!--poll form id-->>
                 <label for="questionInput">Poll Question:</label><br>
                 <input type="text" id="questionInput" name="question" required><br><br>
 
