fixed frontend organize

--- a/frontend/signUpPage.html
+++ b/frontend/signUpPage.html
@@ -23,12 +23,12 @@
     <div class="haveAccount">
         <h2>Already have an account?</h2>
     </div>
-    <!--redirect to login page-->
+
     <a href="loginPage.html"> 
         <button class="smallLoginButton">Login</button>
     </a>
-
-    
+<
+    <div id="message" class="message"></div>
 
     <script>
         document.getElementById('signupForm').addEventListener('submit', function(e) {
